--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "Name": "Mr. Qi Dialogue Expansion",
     "Author": "Jaz",
-    "Version": "1.1.0",
+    "Version": "1.2.0",
     "Description": "Blue man needs more things to say.",
     "UniqueID": "Jaz.Mr.QiDialogueExpansion",
-    "UpdateKeys": ["Nexus:12422"], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
+    "UpdateKeys": ["Nexus:12422"], 
     "ContentPackFor": {
         "UniqueID": "Pathoschild.ContentPatcher"
     }
